This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
5/7/19: Added property to allow real camera to be used with scope in STEM
mode.

5/6/19: More DPI scaling in image drawing and stock dialog boxes.

5/6/19: Added option for a numeric date-time at the start of frame file name.

5/6/19: Fixed TiltDuringRecord not being allowed for a JEOL scope (In 3.7).

4/24/19: Added checkbox for using diffraction mode in OneView/Rio.

4/24/19: Added a binning parameter to SetMontageParams and fixed some but not
all issues when OpenNewMontage is used with no prior montaging.

4/23/19: Fixed dose per frame output in camera setup dialog when aligning but
not saving (In 3.7).

4/21/19: Implemented proper font and dialog scaling for high DPI and made the
AssumeDPI property work to set any desired scaling.

4/17/19: SEM_3-7-4
4/17/19: Backed out DPI-awareness changes in 3.7.3, it wasn't right (In 3.7).

4/15/19: When reusing a grid of points, or filling a polygon with a grid, it
will now test both the center point of the grid and its original corner for
being inside the polygon (In 3.7).

4/15/19: Made it show multishot pattern at center of screen when defining
focus/trial area offset (In 3.7).

4/15/19: Made it create a file with stack name and .openTS extension when
starting a tilt series, and remove it when the file is closed.

4/15/19: Fixed setting marker point when Navigator edit mode is on but no
selectable points are within the display (In 3.7).

4/15/19: Made Filter Control panel include only the actual adjustments being
applied in the net adjustment that it shows (In 3.7).

4/15/19: Made blanking during dark reference take priority over other logic
about whether blanking is needed, in case screen signals are bad (In 3.7).
