@@ -977,10 +977,10 @@
       high magnification for more accurate fitting (e.g., pixel size around 0.25 nm).&nbsp; 
       The defocus should be -1.5 to -2.5 microns.</p>
     <p>
-      The stigmator change should be set so as to get changes of about +/-0.4 microns 
-      in the defocus values found by the fitting.&nbsp; The easiest way to determine 
-      this is just to run the calibration and see how much the numbers change from the 
-      first fit to the following four.&nbsp;&nbsp; Then use the
+      The stigmator change should be set so as to get 
+        an astigmatism value of ~0.8 microns values from the CTF fitting.&nbsp; The easiest way to determine 
+      this is just to run the calibration and see how big the &#39;astig&#39; value is after the 
+        first fit with no stigmation applied.&nbsp;&nbsp; Then use the
       <a href="#hid_autofocusfocus_setupastigmatism">Setup Astigmatism</a> command to 
       change the stigmator value to achieve the desired defocus change instead.&nbsp; 
       However, for FEI Krios, use this command first to start with a value of 
